--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
       margin-bottom: 20px;
     }
     .turno {
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  border-radius: 12px;
+  transition: transform 0.2s, box-shadow 0.2s;
+}
+.turno:hover {
+  transform: scale(1.01);
+  box-shadow: 0 6px 16px rgba(0,0,0,0.15);
+}
       border-radius: 6px;
       padding: 10px;
       margin-bottom: 10px;
@@ -48,6 +56,8 @@
       margin-top: 10px;
     }
     .funcionario {
+  transition: all 0.3s ease;
+
       display: flex;
       flex-direction: column;
       gap: 5px;
@@ -305,6 +315,9 @@
     const div = document.createElement('div');
     div.className = 'funcionario';
 
+    
+
+
     const input = document.createElement('input');
     input.value = nome;
     input.setAttribute('maxlength', '50');
@@ -350,12 +363,12 @@
     }
 
     const btnTroca = document.createElement('button');
-    btnTroca.textContent = '⇄';
+    btnTroca.innerHTML = '🔁';
     btnTroca.setAttribute('aria-label', 'Trocar turno');
     btnTroca.onclick = () => moverFuncionario(div, setor);
 
     const btnExcluir = document.createElement('button');
-    btnExcluir.textContent = 'X';
+    btnExcluir.innerHTML = '🗑️';
     btnExcluir.setAttribute('aria-label', 'Excluir funcionário');
     btnExcluir.onclick = () => {
       if (confirm('Tem certeza?')) {
